[package]
name = "icechunk_example"
version = "0.1.0"
edition = "2021"


[dependencies]
icechunk = "0.3.13"
zarrs = { version = "0.22.5", features = ["async", "chrono"] }
zarrs_filesystem = "0.3.2"
zarrs_icechunk = "0.4.0"
zarrs_storage = { version = "0.4.0", features = ["async"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }

[patch.crates-io]
zarrs = { git = "https://github.com/zarrs/zarrs", rev = "b1a7a19fd249eca1edce493081aed669e6fd2463" }
zarrs_filesystem = { git = "https://github.com/zarrs/zarrs", rev = "b1a7a19fd249eca1edce493081aed669e6fd2463" }
zarrs_storage = { git = "https://github.com/zarrs/zarrs", rev = "b1a7a19fd249eca1edce493081aed669e6fd2463" }
